# Jazzkell

./: Hypnotize.lhs  JazzTypes.lhs  Jazzkel.cabal  Jazzkell.cabal  Jazzkell.lhs  LICENSE  README.md  README.txt  SimpleBossa.lhs  SimpleWalkingBass.lhs  Utils.lhs
Jazzkell/: JazzTypes.lhs  Utils.lhs
examples/: Bebop.lhs  SimpleBossa.lhs  SimpleWalkingBass.lhs  Trading.lhs  WalkingBass.lhs
