name:           Jazzkell
version:        0.0.1
Cabal-Version:  >= 1.8
license:        OtherLicense
license-file:	LICENSE
copyright:      Copyright (c) 2019 Donya Quick
category:       Music
stability:      experimental
build-type:     Custom
author:         Donya Quick <donyaquick@gmail.com>
maintainer:     Donya Quick <donyaquick@gmail.com>
bug-reports:    https://github.com/donya/Jazzkell/issues
homepage:       http://www.donyaquick.com/generative-jazz
synopsis:       Library for modeling jazz improvisation.
description:
        Jazzkell is a Haskell implementation of a functional model for 
        jazz improvisation.
extra-source-files:
        readme.txt

Library
  hs-source-dirs: .
  ghc-options: -O2
  extensions: CPP
  exposed-modules:
        Jazzkell,
        Jazzkell.JazzTypes
        Jazzkell.Utils
  other-modules:
  build-depends:
        base >= 3 && < 5, Euterpea >= 2.0.6, random>=1.1 && <2.0
